package pt.leo.abstractfactory.products.dessert;

public abstract class Dessert {
    public abstract String getDescription();
}
