package pt.leo.abstractfactory.products.main;

public abstract class Main {
    public abstract String getDescription();
}
