package pt.leo.abstractfactory.products.starter;

public abstract class Starter {
    public abstract String getDescription();
}
